<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_donate" tools:context="ie.app.activities.Donate">

    <TextView
        android:id="@+id/donateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/donateTitle"
        android:textColor="#232323"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/donateSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:text="@string/donateSubtitle"
        android:textSize="18sp" />

    <NumberPicker
        android:id="@+id/amountPicker"
        android:layout_width="80dp"
        android:layout_height="199dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="24dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="180dp" />

    <RadioGroup
        android:id="@+id/paymentMethod"
        android:layout_width="117dp"
        android:layout_height="111dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="125dp">

        <RadioButton
            android:id="@+id/PayPal"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/paypal"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/Direct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/direct"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/donateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="50dp"
        android:onClick="donateButtonPressed"
        android:text="@string/donateButton"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="135dp"
        android:text="@string/amount"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="60dp"
        android:layout_toEndOf="@+id/donateButton"
        android:text="@string/total"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/paymentAmount"
        android:layout_width="235dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="115dp"
        android:layout_toEndOf="@+id/amount"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/totalSoFar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="60dp"
        android:layout_toEndOf="@+id/textView4"
        android:text="@string/totalSoFar"
        android:textSize="18sp" />
</RelativeLayout>